是否居住多地址默认值改为否

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "YN-APP-Prod",
+    "name" : "YN-APP",
     "appid" : "__UNI__A829069",
     "description" : "",
     "versionName" : "1.0.0",
